[platform] retiring the routing FS security manager hack
GitOrigin-RevId: c33d1dfe6d449e4200e0424b4695be97f3a050af